tests/golden/err-void-child/expected_error.txt
error: void 要素 `.br` は子を持てません
 --> ./entry.clum:2:3
  |
2 |   これは書けない
  |   ^^^^^^^ void 要素の子ブロックは書けません
